# BOSD

./: CMakeLists.txt  LICENSE  README.md
baselines/: cox_ph.py
data/: data_splits_gen.py
data/ecg/: __init__.py  gt_vit_seq_ecg.txt  last_10_gt_vit_seq_ecg.txt  preprocessing_qt_ecg_data.py
data/eeg/: __init__.py  sleep_features.txt.0  sleep_gt_vit_labels.txt.0
examples/: FB_example.cpp  NN_example.cpp  NN_promps_hsmm_output_model_from_labels.cpp  NN_standard_fit.cpp  dummy_hmm_example.cpp  dummy_hsmm_example.cpp  hsmm_promps.cpp  paper_synth_exp.cpp  promps_hmm_example.cpp  promps_hmm_robot.cpp  promps_hsmm_ball.cpp  promps_hsmm_ball_viterbi.cpp  promps_hsmm_example.cpp  promps_hsmm_experiment.cpp  promps_hsmm_online.cpp  promps_hsmm_robot.cpp  promps_hsmm_sleep_data.cpp  promps_hsmm_synth_exp.cpp  promps_hsmm_viterbi.cpp
include/: ForwardBackward.hpp  HMM.hpp  HSMM.hpp  Multivariate_Gaussian_emission.hpp  NN_basis_function.hpp  NN_emission.hpp  ProMPs_emission.hpp  emissions.hpp
plots/: online_posterior_plots.py  plot_cmd_ecg  plot_cmd_synth
plots/ecg_experiment/: last_10_ecg.txt  mresidualtime.txt  mrunlength.txt  mstates.txt
plots/synth_experiment/: paper_synth_gt_vit_seq.txt  paper_synth_mstates.txt  paper_synth_obs.txt  paper_synth_remaining.txt  paper_synth_runlength.txt
src/: ForwardBackward.cpp  ForwardBackward.hpp  HMM.cpp  HSMM.cpp  Multivariate_Gaussian_emission.cpp  NN_basis_function.cpp  NN_emission.cpp  emissions.cpp
tests/: CMakeLists.txt  FB_test.cpp  HSMM_test.cpp  OnlineHSMMRunlengthBased_MVN_test.cpp  ProMPs_test.cpp  labels_test.cpp
